fix: overflow in UI

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -10,13 +10,15 @@
 }
 
 html {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
-    width: 100%;
-    height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .root {
